archapp/static/archapp/css/my.css
/*General styles*/
body {
  overflow-x: hidden;
}
html, body, {
  height: 100%;
}

::-moz-selection { 
  background: #A8CEDC; 
}
::selection { 
  background: #A8CEDC; 
}

.wrapper > .section {
  min-height: calc(100vh - 171px);
  height: auto !important;
}
a:hover, a:focus {
  text-decoration: none; 
  outline: none;
}
.content {
  color: #242C2F;
}
.background {
  background-color: #F5F5F5;
}
.box {
  background: #FFFFFF;
  border-radius: 4px;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), 0 0 0 1px rgba(63, 63, 68, 0.1);
  padding-top: 10px;
  padding-bottom: 10px;
  margin-top: 15px;
  margin-bottom: 15px;
}

.mapped {
  display: none;
}

.listed > h4 {
  margin-left: 15px;
}
.checkbox {
  margin-top: 0px;
}
.margin-top {
  margin-top: 10px;
}
.nopadding {
  padding-right:0;
  padding-left:0;
}
.nopadding-section {
  padding: 0px;
}
.mbottom {
  margin-bottom: 15px;
  margin-top: 15px;
}
.text-gr {
  color: #535859;
}
.html-height,.body-height {
  height: 100%;
}
.pull-me{
  -webkit-box-shadow: 0 0 8px #FFD700;
  -moz-box-shadow: 0 0 8px #FFD700;
  box-shadow: 0 0 8px #FFD700;
  cursor:pointer;
}
.pull-me {
  display:block;
  position:relative;
  right:-25px;
  width:150px;
  height:20px;
  font-family:arial,sans-serif;
  font-size:14px;
  color:#ffffff;
  background:#cc0000;
  text-decoration:none;
  -moz-border-bottom-left-radius:5px;
  -moz-border-bottom-right-radius:5px;
  border-bottom-left-radius:5px;
  border-bottom-right-radius:5px;
}
.pull-me p {
  text-align:center;
}

.padding {
  padding-top: 15px;
}

/* Forms */ 
@media (max-width: 767px) {
  .form-custom {
    height: 32px !important;
    font-size: 12pt !important;
    padding: 3px 12px;
  }
}
@media (min-width:768px) {
  .form-inline .form-control {
    width: 100%;
  }
}
.form-custom {
  height: 28px;
  font-size: 12px;
  padding: 3px 12px;
}
.form-group-custom {
  max-width: 375px;
  padding: 15px;
  margin: 0 auto;
}
.form-group-item {
  margin: 5px 0;
}
.errorlist {
  padding: 0;
}
.errorlist > li {
  color: #a94442;
  list-style: none;
}
  
/* Buttons */
.btn-color {
  color: #6991AC;
}
.btn-border-color {
  border-color: #C3D7DF;
}
.btn-postion {
  position: relative;
  right: 5px;
}
.qq-upload-button {
  width: 100% !important;
}

/* Maps */
.map-preview {
  height: 250px;
  width: 250px;
  margin-top: 15px;
  margin-bottom: 15px;
}

@media (min-width:768px) {
  .form-inline .form-control {
    width: 100%;
  }
}
@media (max-width : 1200px) {
  .map-preview {
    height: 250px;
    width: 100%;
    margin-top: 15px;
    margin-bottom: 15px;
  }

}
@media (min-width : 1200px) {
  .location {
    margin-right: 15px;
  }
}

@media (min-width: 1600px) {
  .box .form-custom {
    height: 36px;
    font-size: 14pt;
  }
}

/*Geolocation*/
.geo-map {
  height: 500px;
  margin: 15px 0;
}

/* ---All sites page--- */
.site_name {
    margin-bottom: 10px;
    font-weight: bold;
    color: #67727A;
}
.site-preview {
  margin-bottom: 5px;
  margin-top: 5px;
}
.preview-box {
  width: 90%;
  height: 120px;
  margin: 0px;
}
.preview-box:hover {
  background-color: #71A7BC;
}
.preview-box > a {
  color: #5E5E5E;
}
.preview-box > a:hover {
  color: black;
}
.landing-page .preview-box p {
  margin-top: 0px;
  font-size: 16px;
  line-height: 18px;
}
/* ---Site page--- */
.site-page .row {
  margin-left: 5px;
  margin-right: 5px;
}
.bibliography {
  white-space: pre-line;
}

.gallery {
  margin-bottom: 10px;
}
.gallery-box {
  background-color: #347790;
  border-radius: 4px;
}
.carousel-inner > .item > div {
  padding-top: 10px;
  padding-bottom: 10px;
}
.carousel-inner > .item > div > a > img {
  display: block;
  margin: auto;
}

.carousel-control.left {
  border-radius: 4px;
}
.carousel-control.right {
  border-radius: 4px;
}

/* Carousel */
.multi-item-carousel .carousel-inner > .item {
  -webkit-transition: 500ms ease-in-out left;
  transition: 500ms ease-in-out left;
}
.multi-item-carousel .carousel-inner .active.left {
  left: -33%;
}
.multi-item-carousel .carousel-inner .active.right {
  left: 33%;
}
.multi-item-carousel .carousel-inner .next {
  left: 33%;
}
.multi-item-carousel .carousel-inner .prev {
  left: -33%;
}
@media all and (transform-3d), (-webkit-transform-3d) {
  .multi-item-carousel .carousel-inner > .item {
    -webkit-transition: 500ms ease-in-out all;
    transition: 500ms ease-in-out all;
    -webkit-backface-visibility: visible;
    backface-visibility: visible;
    -webkit-transform: none!important;
    transform: none!important;
  }
}
.multi-item-carousel .carouse-control.left,
.multi-item-carousel .carouse-control.right {
  background-image: none;
}

/* ---New Site page--- */

#id_undefined {
  width: 1.2em;
  height: 1.2em;
  outline: none;
}
#id_dating {
  border:0px;
  background-color: #F5F5F5;
}

/* Slider */
#slider {
  padding-left:70px;
  padding-right:100px;
  margin-left:0px;
}
#floating-panel {
  border: 2px solid #C3D7DF;
  left: 500px;
  width: 45%;
  background: white;
  position: relative;
  bottom: 480px;
  z-index: 5;
  padding: 5px;
  text-align: center;
  font-family: 'Roboto','sans-serif';
  line-height: 30px;
  padding-left: 10px;
}
.avatar {
  width: 350px;
}

/* Sidebar */
.wrapper-left {
  position: relative;
  top: 0;
  /*the problem is here*/
  height: calc(100vh - 75px);
}

.sidebar {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  width: 260px;
  display: block;
  z-index: 1;
  color: #fff;
  font-weight: 200;
  background-size: cover;
  background-position: center center;
  background-color: #347790;
}
.sidebar .sidebar-wrapper {
  position: relative;
  max-height: none;
  min-height: 100%;
  overflow: hidden;
  width: 240px;
  z-index: 4;
}
.sidebar .sidebar-background {
  position: absolute;
  z-index: 1;
  height: 100%;
  width: 100%;
  display: block;
  top: 0;
  left: 0;
  background-size: cover;
  background-position: center center;
}
.sidebar .logo-c {
  padding: 10px 15px;
  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
}
/* ... */

